# SatSimulator

./: CMakeLists.txt  Figure.py  README.txt  RTC.c  TcpPipe.py  Time.c  main.c  main.py  pyplot.py.lnk
ConsumptionStates/: ConsumptionStates.c  ConsumptionStates.h
ExecPython/: ExecPython.sln
ExecPython/ExecPython/: ExecPython.csproj  Program.cs
ExecPython/ExecPython/Properties/: AssemblyInfo.cs
Helper/: GenericHelpFunctions.c  GenericHelpFunctions.h  List.c  List.h  RunPython.c  RunPython.h  TcpHandler.c  TcpHandler.h  TcpPlotter.c  TcpPlotter.h  TimeHelperFunctions.c  TimeHelperFunctions.h  sem.c  sem.h  threads.c  threads.h
SImProject/: CMakeLists.txt
SimFiles/: GPS_Module.c  GPS_Module.h  GPS_types.h  GenericHelpFunctions.c  GenericHelpFunctions.h  SimEPS.c  SimEPS.h  SimI2C.c  SimI2C.h  SimRTC.c  SimRTC.h  SimSTK.c  SimSTK.h  SimSolar.c  SimSolar.h  SimTRX.c  SimTRX.h  SimThermodynamics.c  SimThermodynamics.h  SimulationConfigurations.h  TimeHelperFunctions.c  TimeHelperFunctions.h
SimFiles/SimConfigFiles/: SimConfigEPS.h  SimConfigGPS.h  SimConfigI2C.h  SimConfigSolar.h  SimConfigTRX.h  SimConfigThermodynamics.h  SimulationConfigurations.h  threads.h
SimPlotter/: Figure.py  TcpPipe.py  main.py
SimulatorCommandLine/: CmdTypes.h  CommandDictionary.c  CommandDictionary.h  SimCmdLine.c  SimCmdLine.h
SubsystemModules/: FRAM.c  FRAM.h  GPS_Module.c  GPS_Module.h  GPS_types.h  I2C.c  I2C.h  OBC_ConsumptionStates.h  RTC.c  RTC.h  Time.c  Time.h  boolean.h  isisTRXVU.c  isisTRXVU.h
SubsystemModules/hal/: errors.h
